fix: fix data exchange approval
