# docs/api/openAPI.yaml
@@ -123,7 +123,7 @@ components:
           format: uuid
           maxItems: 50
           type: string
-        isFinalized:
+        finalized:
           type: boolean
         timestamp:
           format: date-time
@@ -136,7 +136,6 @@ components:
       required:
       - approvedTypes
       - dataExchangeRequestId
-      - isFinalized
       type: object
     DataExchangeRequestDto:
       additionalProperties: false
@@ -1813,6 +1812,7 @@ paths:
             schema:
               $ref: '#/components/schemas/DataExchangeApprovalDto'
               additionalProperties: false
+        required: true
       responses:
         '201':
           content:
